@startuml
skinparam class {
    FontSize 14
    AttributeFontSize 12
    AttributeFontColor Black
}

skinparam nodesep 50
skinparam ranksep 50

class Usuario {
    Long id
    String nomeUsuario
    String email
    String senha
    String nomeCompleto
    Timestamp dataNascimento
    String telefone
    int seguindo
    int seguidores
}

class Postagem {
    Long id
    String titulo
    Date dataCriacao
    String status
    String categoria
}

class Informativo {
    Long id
    String titulo
    String conteudo
    Date dataCriacao
    String autor
    String categoria
}

class Comentario {
    Long id
    String conteudo
    Date dataCriacao
}

Usuario "1" -- "0..*" Postagem : possui
Usuario "1" -- "0..*" Comentario : escreve
Postagem "0..*" -- "1" Usuario : pertence
Postagem "1" -- "0..*" Comentario : possui
Informativo "1" -- "0..*" Comentario : possui
Comentario "0..*" -- "1" Usuario : escrito por
Comentario "0..*" -- "1" Postagem : pertence
Comentario "0..*" -- "1" Informativo : pertence
@enduml
